# scp2p

./: .gitignore  AGENTS.md  AUTHORS  CHAT_SPECIFICATION.md  CODE_OF_CONDUCT.md  Cargo.toml  DEPRECATION_SCHEDULE.md  DESKTOP_APP_PLAN.md  DISTRIBUTION_PLAN.md  DOCS.md  LICENSE  NOTICE  PLAN.md  README.md  RELAY_IN_SHARES_CONCEPT.md  REMAINING_WORK_TRACKER.md  SECURITY.md  SPECIFICATION.md  TRADEMARK.md  build2.txt  install.ps1  install.sh
.github/: FUNDING.yml
.github/workflows/: release-core.yml  release-desktop.yml  release-relay.yml
Advisories/: DESKTOP_APP_ADVISORY.md  REMAINING_WORK_TRACKER.md  SECURITY_AND_TECHNICAL_ADVISORY.md  SECURITY_ATTACK_VECTOR_ADVISORY_2026-03-01.md
app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css
app/src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: DownloadQueue.tsx  NodeRequiredOverlay.tsx
app/src/components/layout/: Layout.tsx  Sidebar.tsx
app/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  HashDisplay.tsx  Input.tsx  Modal.tsx  Select.tsx  StatusDot.tsx
app/src/hooks/: useBackgroundService.ts  useDownloadQueue.ts
app/src/lib/: commands.ts  shareLink.ts  types.ts
app/src/pages/: Communities.tsx  Dashboard.tsx  Discover.tsx  MyShares.tsx  Peers.tsx  Publish.tsx  Search.tsx  Settings.tsx  ShareBrowser.tsx  Subscriptions.tsx
crates/scp2p-cli/: Cargo.toml  README.md
crates/scp2p-cli/src/: main.rs  shell.rs
crates/scp2p-core/: Cargo.toml
crates/scp2p-core/examples/: quic_probe.rs
crates/scp2p-core/src/: api.rs  blob_store.rs  capabilities.rs  cbor.rs  community_index.rs  config.rs  conformance.rs  content.rs  dht.rs  dht_keys.rs  ids.rs  lib.rs  manifest.rs  net_fetch.rs  peer.rs  peer_db.rs  relay.rs  search.rs  store.rs  transfer.rs  transport.rs  transport_net.rs  wire.rs
crates/scp2p-core/src/api/: helpers.rs  mod.rs  node_dht.rs  node_net.rs  node_publish.rs  node_relay.rs  tests.rs
crates/scp2p-desktop/: Cargo.toml
crates/scp2p-desktop/src/: app_state.rs  commands.rs  dto.rs  lib.rs  main.rs
crates/scp2p-relay/: Cargo.toml  README.md
crates/scp2p-relay/src/: config.rs  main.rs  persist.rs  runner.rs
scripts/: bump-version.ps1
