[workspace]
members = [
  "crates/scp2p-core",
  "crates/scp2p-cli",
  "crates/scp2p-desktop",
  "app/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
ciborium = "0.2"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "signal", "fs"] }
tracing = "0.1"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
futures-util = "0.3"
pbkdf2 = "0.12"
unicode-normalization = "0.1"
