[package]
name = "scp2p-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "scp2p_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scp2p-desktop = { path = "../../crates/scp2p-desktop" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
