[package]
name = "scp2p-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
scp2p-core = { path = "../scp2p-core" }
tokio.workspace = true

[target.'cfg(windows)'.dependencies]
windows = "0.62.2"
