[package]
name = "scp2p-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["env"] }
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
scp2p-core = { path = "../scp2p-core" }
tokio.workspace = true
inquire = "0.7"
indicatif = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
