[package]
name = "scp2p-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive command-line client for the SCP2P peer-to-peer network"
keywords = ["p2p", "cli", "content-sharing", "scp2p"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["env"] }
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
scp2p-core = { path = "../scp2p-core", version = "0.3.2" }
tokio.workspace = true
inquire = "0.7"
indicatif = "0.17"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
