[package]
name = "scp2p-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rusqlite.workspace = true
chacha20poly1305.workspace = true
futures-util.workspace = true
pbkdf2.workspace = true
unicode-normalization.workspace = true

[target.'cfg(windows)'.dependencies]
windows = "0.62.2"

[dev-dependencies]
tempfile = "3"
